small css heading fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ $link-color: #52B15A;
 
 $navbar-default-bg: #FCFCFC;
 $navbar-default-color: #918291;
-$navbar-default-link-color: #514454;
+$navbar-default-link-color: #5f4f63;
 $navbar-default-link-active-color: #514454;
 $navbar-default-border: transparent;
 
