--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -77,7 +77,7 @@ textarea#notes
 	border-radius:0;
 	opacity:0.98;
 	padding-top:0.25em;
-	smax-height:400px;
+	max-height:600px;
 	overflow-y:scroll;
 }
 
