--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ $link-color: #52B15A;
 
 $navbar-default-bg: #FCFCFC;
 $navbar-default-color: #918291;
-$navbar-default-link-color: #5f4f63;
+$navbar-default-link-color: #714c6f;
 $navbar-default-link-active-color: #514454;
 $navbar-default-border: transparent;
 
@@ -23,7 +23,7 @@ $component-active-bg: #52B15A;
 
 $font-size-base: 14px;
 
-$font-size-h1: 26px;
+$font-size-h1: 36px;
 $font-size-h2: 22px;
 $font-size-h3: 19px;
 $font-size-h4: 16px;
