--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,8 @@ $link-color: #52B15A;
 $navbar-default-bg: #FCFCFC;
 $navbar-default-color: #918291;
 $navbar-default-link-color: #714c6f;
-$navbar-default-link-active-color: #514454;
+$navbar-default-link-active-color: #faeefe;
+$navbar-default-link-active-bg: #714c6f;
 $navbar-default-border: transparent;
 
 $component-active-bg: #52B15A;
