--- a/app/assets/stylesheets/tweaks.scss
+++ b/app/assets/stylesheets/tweaks.scss
@@ -75,6 +75,8 @@ textarea#notes
 {
 	border:none;
 	border-radius:0;
+    box-shadow: 0 10px 10px #999;
+    
 	opacity:0.98;
 	padding-top:0.25em;
 	max-height:600px;
