--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-	<div class="container-fluid">
+	<div class="container">
 
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> <%= Settings.short_course_name %></a>
@@ -78,20 +78,6 @@
 		</div>
 	</div>
 </nav>
-
-<% if flash[:alert] %>
-<div class="alert alert-danger alert-dismissible">
-	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<%= flash[:alert] %>
-</div>
-<% end %>
-
-<% if flash[:notice] %>
-<div class="alert alert-success alert-dismissible">
-	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<%= flash[:notice] %>
-</div>
-<% end %>
 
 <script>
 // Prevent dropdown to be closed when we click on an accordion link
