--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -25,7 +25,22 @@
 
 <body>
 	<%= render 'layouts/navbar' %>
-	<div id="content" class="container limit-width">
+	<div id="content" class="container">
+
+<% if flash[:alert] %>
+<div class="alert alert-danger alert-dismissible">
+	<button type="button" class="close" data-dismiss="alert">&times;</button>
+	<%= flash[:alert] %>
+</div>
+<% end %>
+
+<% if flash[:notice] %>
+<div class="alert alert-success alert-dismissible">
+	<button type="button" class="close" data-dismiss="alert">&times;</button>
+	<%= flash[:notice] %>
+</div>
+<% end %>
+
 		<%= yield %>
 	</div>
 	<%= render 'layouts/footer' %>
