--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,4 +45,7 @@ $container-lg: 970px;
 @import "fonts";
 @import "print";
 
+@import "navigation";
+@import "sidebar";
+
 @import "videojs-sublime-skin";
