--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -138,7 +138,7 @@
 					<% grade.subgrades.each_pair do |k,v| %>
 					<%= v %> /
 					<% end %>
-					<strong><%= translate_grade(grade.grade) %></strong>
+					<strong><%= translate_grade(grade.any_final_grade) %></strong>
 				</div>
 			</div>
 			<div class="panel-body">
