--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -2,7 +2,7 @@ body
 {
 	-webkit-font-smoothing: subpixel-antialiased;
 	line-height:1.2em;
-	padding-top:50px;
+	spadding-top:82px;
 	background-color:#FCFCFC;
 	background-size:cover;
 	background-attachment: fixed;
@@ -18,12 +18,7 @@ body
 //    background-size:cover;
 //    sbackground-attachment:fixed;
     border-bottom:1px solid #dddddd;
-    opacity:0.97;
-}
-
-.navbar .navbar-right
-{
-	smargin-right:0 ! important;
+    opacity:0.99;
 }
 
 .navbar .glyphicon
@@ -75,7 +70,7 @@ body > .alert
  *
  */
 
-.container
+.constainer
 {
 	padding-left:0;
 	padding-right:0;
@@ -109,17 +104,35 @@ body > .alert
     padding-top: 0;
 }
 
-#content h1
+#content h1, #content .videoblock
 {
     padding-top: 1.5em;
     padding-bottom: 1.5em;
     background-color: #F25D50;
-    color: white;
-    margin-top: 0;
+    color:white;
+//    color: #F25D50;
+//    padding-left:1em;
+    margin-top: 1em;
+}
+
+#content h1, #content .videoblock
+{
     margin-left: calc(-50vw + 50%);
     padding-left: calc(50vw - 50%);
     margin-right: calc(-50vw + 50%);
     padding-right: calc(50vw - 50%);
+//    margin-left:-15px;
+//    padding-left:15px;
+//    margin-right:-15px;
+//    padding-right:15px;
+}
+
+#content .videoblock
+{
+    margin-top:0 ! important;
+    padding-top:0;
+    padding-bottom:0;
+    background-color:black;
 }
 
 @media (max-width: 480px)
@@ -414,12 +427,13 @@ footer
 {
 	padding:1.5em;
 	text-align:center;
-    background-color: #F2D8CE;
+    background-color: $color1;
+    color:white;
 }
 
 footer a
 {
-    color:#262626;
+    color:white;
 }
 
 footer img
