--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,6 +5,7 @@
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
 <% if Settings.hands_allow %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
@@ -28,6 +29,7 @@
 <li class="divider"></li>
 <% end %>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
 <% if Settings['links'] %>
 <li class="divider"></li>
 <% Settings['links'].each do |title, url| %>
