--- a/app/views/layouts/_sections.html.erb
+++ b/app/views/layouts/_sections.html.erb
@@ -1,8 +1,8 @@
 <% for section in @sections_in_navbar %>
 
-<li class="dropdown dropdown-accordion">
+<li class="dropdown hidden-xs">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-		<%= section.title %>
+		<%= section.title %> <span class='caret'></span>
 	</a>
 	<ul class="dropdown-menu">
 		<% for page in section.pages %>
