--- a/app/views/submits/discuss.html.erb
+++ b/app/views/submits/discuss.html.erb
@@ -1,27 +1,21 @@
-<h1>Grading list</h1>	
+<h1>To be discussed</h1>	
 
 <% if !Group.any? || current_user.group %>
-
-<%= button_to 'Mark all I have graded as done', submits_mark_all_done_path, class: 'pull-right btn', data: { confirm:'Are you sure? You will not be able to edit anymore.' } %>
 
 <table class="table">
 	<tr>
 		<th>pset</th>
 		<th>name</th>
-		<th>id</th>
 		<th>submitted</th>
-		<th>started grading</th>
-		<th>done</th>
+		<th>discussed</th>
 	</tr>
-
-	<% @to_grade.each do |submit| %>
+		
+	<% @to_discuss.each do |submit| %>
 	<tr class="<%= submit.grade %>">
 		<td><%= submit.pset.name %></td>
 		<td><%= link_to submit.user.name, submit_grade_path(submit_id: submit.id) %></td>
-		<td><%= submit.user.login_id %></td>
 		<td><% if submit.submitted_at %><%= submit.submitted_at.strftime("%a %d %b %H:%M") %><% end %></td>
-		<td><%= !!submit.grade ? "✔︎" : "" %>
-		<td><%= submit.grade.finished? ? "✔︎" : "" if submit.grade %></td>
+		<td><%= '' if submit.grade %></td>
 	</tr>
 	<% end %>
 </table>
