--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -49,7 +49,18 @@
 				</li>
 				<% end %>
 
+				<% if logged_in? and current_user.admin? %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <%= current_user && current_user.name || session[:cas_user] %></a>
+					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
+						<%= render 'layouts/menu' %>
+					</ul>
+				</li>
+				<% elsif logged_in? %>
 				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+				<% else %>
+				<li><%= link_to("<span class='glyphicon glyphicon-user'></span> Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
+				<% end %>
 			</ul>
 
 			<ul class="nav navbar-nav">
