--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -56,7 +56,7 @@
 						<%= render 'layouts/menu' %>
 					</ul>
 				</li>
-				<% elsif logged_in? %>
+				<% elsif authenticated? %>
 				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
 				<% else %>
 				<li><%= link_to("<span class='glyphicon glyphicon-user'></span> Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
