--- a/app/views/config/_webhook.html.erb
+++ b/app/views/config/_webhook.html.erb
@@ -7,11 +7,11 @@
 
 <% if @secret.present? %>
 <p>
-	URL: <%= api_reload_url %><br>
+	URL: <%= api_reload_url(protocol: 'https') %><br>
 	Secret: <span id="secret"><%= @secret %></span>
 </p>
 <% else %>
 <p>
-	<%= link_to "Generate", config_generate_secret_path, method:'post', remote:true, class:'btn btn-primary' %>
+	<%= link_to "Generate", config_generate_secret_path, method:'post', class:'btn btn-primary' %>
 </p>
 <% end %>
