--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-home hidden-xs"></span> <%= Settings.short_course_name %> <span class="label label-default"><%= current_user.schedule.name %></span></a>
+			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-home hidden-xs"></span> <%= Settings.short_course_name %> <span class="label label-default"><%= @schedule_name %></span></a>
 		</div>
 			
 		<div class="collapse navbar-collapse">
