--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -17,15 +17,18 @@
 			<li><%= link_to 'Make assistant', user_path(id: @student.id, user: { role: :assistant }), method: :put %></li>
 			<li><%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put %></li>
 			<li role="separator" class="divider"></li>
-			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %>
-			</ul>
-		</div>
+			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %></li>
+		</ul>
 	</div>
+</div>
 
 <h4><%= best_in_place @student, :name, as: :input, url: user_path(id: @student.id) %></h4>
 <p><%= best_in_place @student, :mail, as: :input, url: user_path(id: @student.id) %></p>
 
 <p><span class="bar"><%= @student.attendance %></span></p>
+
+<p><%= best_in_place @student, :schedule_id, as: :select, url: user_path(id: @student.id), collection: Schedule.pluck(:id, :name).prepend([nil, '(Inactive)']), place_holder: '(Inactive)' %></p>
+
 
 <%= form_for @student do |f| %>
 <%= f.text_area :notes, size: "x8", class: "form-control" %>
