--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -56,8 +56,15 @@
 						<%= render 'layouts/menu' %>
 					</ul>
 				</li>
-				<% elsif authenticated? %>
+				<% elsif logged_in? %>
 				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+				<% elsif authenticated? %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <%= current_user && current_user.name || session[:cas_user] %></a>
+					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
+						<%= render 'profile/edit' %>
+					</ul>
+				</li>
 				<% else %>
 				<li><%= link_to("<span class='glyphicon glyphicon-user'></span> Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
 				<% end %>
