new scheduling + head role

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -28,7 +28,7 @@
 
 .sidebar-toggle .icon-bar
 {
-	background-color: white;
+	background-color: $color5;
 	display: block;
 	width: 22px;
 	height: 2px;
