--- a/app/views/admin/import.html.erb
+++ b/app/views/admin/import.html.erb
@@ -2,7 +2,7 @@
 
 <p>Paste all data lines from a .xls datanose user export.</p>
 
-<%= form_tag admin_import_groups_path(schedule_id: params[:schedule_id]), :method => :post do %>
+<%= form_tag admin_import_groups_path, :method => :post do %>
 <textarea name="paste" class="form-control"><%= @paste %></textarea>
 <p><input type="submit" class="btn"></p>
 <% end %>
