--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -22,6 +22,27 @@
 
 
 
+<% elsif current_user.head? %>
+<li><%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<% if Settings.hands_allow %>
+<li class="divider"></li>
+<li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path %></li>
+<% end %>
+<% if Settings['links'] %>
+<li class="divider"></li>
+<% Settings['links'].each do |title, url| %>
+<li><%= link_to title.html_safe, url %></li>
+<% end %>
+<% end %>
+<li class="divider"></li>
+<li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
+
+
+
 <% elsif current_user.assistant? %>
 <% if Settings.hands_allow %>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
