--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -49,7 +49,7 @@
 				</li>
 				<% end %>
 
-				<% if logged_in? and current_user.admin? %>
+				<% if logged_in? and current_user.assistant? or current_user.head? or current_user.admin? %>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> <%= current_user && current_user.name || session[:cas_user] %></a>
 					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
@@ -99,12 +99,12 @@
 	</div>
 </nav>
 
+<% if logged_in? && @schedule %>
 <nav id="secondary-nav" class="navbar navbar-default visible-xs-block">
 	<div class="container">
 		<ul class="nav navbar-nav">
-			<% if logged_in? && @schedule %>
 			<%= render 'layouts/schedule' %>
-			<% end %>
 		</ul>
 	</div>
 </nav>
+<% end %>
