--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -42,7 +42,9 @@
 		</div>
 		<% end %>
 
+		<div class="col-md-12">
 		<%= yield %>
+		</div>
 	</div>
 	<%= render 'layouts/footer' %>
 	<div id="popup"></div>
