--- a/app/views/submits/index.html.erb
+++ b/app/views/submits/index.html.erb
@@ -1,7 +1,5 @@
 <h1>Grading list</h1>	
 
-<% if !Group.any? || current_user.group %>
-
 <%= button_to 'Mark all I have graded as done', submits_mark_all_done_path, class: 'pull-right btn', data: { confirm:'Are you sure? You will not be able to edit anymore.' } %>
 
 <table class="table">
@@ -16,7 +14,7 @@
 
 	<% @to_grade.each do |submit| %>
 	<tr class="<%= submit.grade %>">
-		<td><%= submit.pset.name %></td>
+		<td><%= submit.pset && submit.pset.name %></td>
 		<td><%= link_to submit.user.name, submit_grade_path(submit_id: submit.id) %></td>
 		<td><%= submit.user.login_id %></td>
 		<td><% if submit.submitted_at %><%= submit.submitted_at.strftime("%a %d %b %H:%M") %><% end %></td>
@@ -25,12 +23,3 @@
 	</tr>
 	<% end %>
 </table>
-
-<% else %>
-
-<div class="jumbotron">
-  <h1>You</h1>
-  <p>Are not in a group.</p>
-</div>
-
-<% end %>
