--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,7 @@ $container-lg: 970px;
 @import "tweaks";
 @import "fonts";
 @import "print";
+@import "font-awesome";
 
 @import "navigation";
 @import "sidebar";
