--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,7 +33,7 @@
 
 				<% if Settings.hands_allow && current_user.valid_profile? %>
 				<li class="dropdown" id="ama-nav">
-					<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-question-sign"></span> Ask</a>
+					<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o" %></a>
 					<ul class="dropdown-menu" style="min-width:300px;">
 						<%= render 'layouts/ama' %>
 					</ul>
@@ -42,7 +42,7 @@
 
 				<% if current_user.valid_profile? %>
 				<li class="dropdown">
-					<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><span class="glyphicon glyphicon-ok"></span></a>
+					<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn" %></a>
 					<ul class="dropdown-menu" style="min-width:300px;">
 						<%= render 'layouts/ama' %>
 					</ul>
