--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,54 +21,7 @@
 		</div>
 			
 		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<% if !Settings.mail_address.blank? && logged_in? && (@alerts.count > 0 || @current_user.admin?) %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "bell-o" %></a>
-					<ul class="dropdown-menu">
-						<%= render 'layouts/alerts' %>
-					</ul>
-				</li>
-				<% end %>
 
-				<% if Settings.hands_allow && current_user.valid_profile? %>
-				<li class="dropdown" id="ama-nav">
-					<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o" %></a>
-					<ul class="dropdown-menu" style="min-width:300px;">
-						<%= render 'layouts/ama' %>
-					</ul>
-				</li>
-				<% end %>
-
-				<% if current_user.submits.any? %>
-				<li class="dropdown">
-					<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn" %></a>
-					<ul class="dropdown-menu" style="min-width:300px;">
-						<%= render 'layouts/ama' %>
-					</ul>
-				</li>
-				<% end %>
-
-				<% if logged_in? and current_user.assistant? or current_user.head? or current_user.admin? %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
-					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
-						<%= render 'layouts/menu' %>
-					</ul>
-				</li>
-				<% elsif logged_in? %>
-				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
-				<% elsif authenticated? %>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
-					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
-						<%= render 'profile/edit' %>
-					</ul>
-				</li>
-				<% else %>
-				<li><%= link_to("Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
-				<% end %>
-			</ul>
 
 			<ul class="nav navbar-nav">
 				
@@ -94,6 +47,58 @@
 				</li>
 				<% end %>
 			</ul>
+
+
+			<ul class="nav navbar-nav navbar-right">
+				<% if !Settings.mail_address.blank? && logged_in? && (@alerts.count > 0 || @current_user.admin?) %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "bell-o", class: "fa-fw" %></a>
+					<ul class="dropdown-menu">
+						<%= render 'layouts/alerts' %>
+					</ul>
+				</li>
+				<% end %>
+
+				<% if Settings.hands_allow && current_user.valid_profile? %>
+				<li class="dropdown" id="ama-nav">
+					<a href="#" id="ama-dd" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %></a>
+					<ul class="dropdown-menu" style="min-width:300px;">
+						<%= render 'layouts/ama' %>
+					</ul>
+				</li>
+				<% end %>
+
+				<% if current_user.submits.any? %>
+				<li class="dropdown">
+					<a href="/profile/grades" data-toggle="tooltip" data-placement="bottom" title="Feedback"><%= fa_icon "bullhorn", class: "fa-fw" %></a>
+					<ul class="dropdown-menu" style="min-width:300px;">
+						<%= render 'layouts/ama' %>
+					</ul>
+				</li>
+				<% end %>
+
+				<% if logged_in? and current_user.assistant? or current_user.head? or current_user.admin? %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= fa_icon "tasks", class: "fa-fw" %></a>
+					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
+						<%= render 'layouts/menu' %>
+					</ul>
+				</li>
+				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+				<% elsif logged_in? %>
+				<p class="navbar-text hidden-xs"><%= current_user && current_user.name || session[:cas_user] %></p>
+				<% elsif authenticated? %>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user && current_user.name || session[:cas_user] %></a>
+					<ul class="dropdown-menu" id="user-menu" style="min-width:200px;">
+						<%= render 'profile/edit' %>
+					</ul>
+				</li>
+				<% else %>
+				<li><%= link_to("Sign in".html_safe, CASClient::Frameworks::Rails::Filter.login_url(controller))%></li>
+				<% end %>
+			</ul>
+
 		</div>
 
 	</div>
