--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -74,3 +74,28 @@ span.underline
 {
 	text-decoration: underline;
 }
+
+
+h1
+{
+    margin-top:3em;
+}
+
+h1:first-child
+{
+    margin-top:1em;
+}
+
+h2
+{
+    margin-top:2em;
+    margin-bottom:1em;
+}
+
+@media (max-width: 768px)
+{
+	h2
+	{
+		margin-top:1em;
+	}
+}
