--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,21 +1,23 @@
+//
+// PRIMARY AND SECONDARY NAVBAR STYLES
+//
+
 .navbar
 {
-	margin-bottom:0;
-	border-bottom:0;
     border:0;
+	margin-bottom:0;
+    opacity:0.99;
 }
 
-#main-nav
+.navbar .empty
 {
-    z-index:1;
-//    border-bottom: 1px solid white;
-	border-bottom:0;
-    border-radius: 0;
+	width:12px;
 }
 
-i.fa
+.navbar .dropdown-menu > li > a
 {
-    font-size: 15px;
+	padding-top:0.4em;
+	padding-bottom:0.4em;
 }
 
 .navbar-right > .navbar-text:last-child
@@ -23,7 +25,81 @@ i.fa
 	margin-right:0;
 }
 
+.navbar .navbar-text
+{
+	line-height:20px;
+	color:#555;
+}
 
+.navbar .label // schedule label next to site name
+{
+	background-color: transparent;
+	color: $color1;
+	border: 1px solid $color1;
+}
+
+//
+// MENUS
+//
+
+.navbar .list-group {
+	margin-bottom: 0;
+}
+
+.navbar .list-group .list-group-item {
+	border-radius: 0;
+	border-left: none;
+	border-right: none;
+}
+
+.navbar .list-group .list-group-item:last-child {
+	border-bottom: none;
+}
+
+.dropdown-menu
+{
+	border:none;
+	border-radius:0;
+    box-shadow: 10px 10px black;
+    
+	opacity:0.98;
+	padding-top:0.25em;
+	max-height:600px;
+	overflow-y:scroll;
+}
+
+.navbar .dropdown-menu
+{
+	min-width:300px;
+}
+
+//
+// ICONS
+//
+
+.navbar .glyphicon
+{
+	font-size:0.8em;
+	margin-right:0.3em;
+}
+
+i.fa
+{
+    font-size: 15px;
+}
+
+//
+// PRIMARY NAVBAR STYLES
+//
+
+#main-nav
+{
+    z-index:1;
+}
+
+//
+// SIDEBAR TOGGLE
+//
 
 .sidebar-toggle
 {
@@ -53,35 +129,12 @@ i.fa
 	margin-top: 4px;
 }
 
-.navbar-default .navbar-text
-{
-	line-height:20px;
-	color:#555;
-}
-
-.navbar .label
-{
-	background-color: transparent;
-	color: $color1;
-	border: 1px solid $color1;
-}
-
-@media (min-width: 480px)
-{
-//	.sidebar-toggle
-//	{
-//		padding-left:0;
-//	}
-}
+//
+// OVERRIDES FOR MOBILE + TABLET
+//
 
 @media (max-width: 768px)
 {
-	/* line 141, /Users/martijn/dev/course-site/app/assets/stylesheets/strap.scss */
-	#content section, #content header, .alert
-	{
-//		padding: 0 1em 1em 1em;
-	}
-
 	#content section + section, #content header + header, .alert
 	{
 		padding-top: 1em;
@@ -89,7 +142,7 @@ i.fa
 	
 	#secondary-nav .navbar-nav
 	{
-		float: left;
+		float:left;
 		overflow-y:scroll;
 		white-space:nowrap;
 		max-width:100%;
