show schedule in hands

--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -4,7 +4,10 @@
 	<% @my_hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item active') do %>
 	<span class="badge"><%= hand.location %></span>
-	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %>
+	<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<br>
+	<small><%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
 	<% end %>
 	<% end %>
@@ -13,7 +16,10 @@
 	<% @hands.each do |hand| %>
 	<%= link_to({controller: 'hands', action: 'show', id: hand.id}, class: 'list-group-item') do %>
 	<span class="badge"><%= hand.location %></span>
-	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %><br><small><%= time_ago_in_words(hand.created_at) %> ago</small>
+	<%= hand.user.name %><% if hand.user.group %>  (<%= hand.user.group.name %>)<% end %>
+	<span class="label label-default"><%= hand.user.schedule && hand.user.schedule.name %></span>
+	<br>
+	<small><%= time_ago_in_words(hand.created_at) %> ago</small>
 	<% end %>
 	<% end %>
 
@@ -22,8 +28,16 @@
 
 	<% @long_time_users.each do |user| %>
 	<%= link_to({controller: 'hands', action: 'student', id: user.id}, class: 'list-group-item') do %>
-	<%= user.name %><% if user.group %>  (<%= user.group.name %>)<% end %><br><small>
-		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!<% else %><%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago<% end %></small>
+	<%= user.name %><% if user.group %>  (<%= user.group.name %>)
+	<% end %>
+	<span class="label label-default"><%= user.schedule && user.schedule.name %></span>
+	<br>
+	<small>
+		<% if user.last_spoken_at.blank? %>A new student: give them a warm welcome!
+		<% else %>
+		<%= time_ago_in_words(user.last_spoken_at) unless user.last_spoken_at.blank? %> ago
+		<% end %>
+	</small>
 	</a>
 	<% end %>
 	<% end %>
